# claude-code-talk-to-me

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  LOCAL_MODE.md  README.md  download-models.py  install-prerequisites.sh  pr-description.md  setup-plugin.py  test-audio.py
.claude-plugin/: marketplace.json  plugin.json
server/: elevenlabs_stt_test.py  pyproject.toml  requirements.txt
server/talktome_mcp/: __init__.py  call_manager.py  server.py  utils.py
server/talktome_mcp/providers/: __init__.py  base.py  elevenlabs.py  phone_local.py  stt_elevenlabs.py  stt_whisper.py  tts_elevenlabs.py  tts_piper.py
skills/talk-to-me/: SKILL.md
