[project]
name = "talktome-mcp"
version = "2.0.0"
description = "MCP server for local voice communication with Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "torch>=2.0.0",
    "silero-vad>=5.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
elevenlabs = ["aiohttp>=3.9.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
override-dependencies = ["av<13.0.0"]