[project]
name = "talktome-mcp"
version = "3.0.0"
description = "MCP server for cloud-based voice communication with Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "asyncio-throttle>=1.0.2",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pydub>=0.25.0",
    "elevenlabs>=2.29.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
